Fix alignment

--- a/resources/assets/less/bem/page-mode.less
+++ b/resources/assets/less/bem/page-mode.less
@@ -52,6 +52,7 @@
     .@{_top}--breadcrumb & + &::before {
       content: '»';
       margin-right: @spacing;
+      margin-top: (@spacing / 2);
     }
   }
 }
